--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "electron:build": "tsc && vite build && electron-builder"
   },
   "dependencies": {
+    "antd": "^5.2.1",
     "electron-is-dev": "^2.0.0",
     "fabric": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/fabric": "^4.5.15",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
