--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "antd": "^5.2.1",
     "electron-is-dev": "^2.0.0",
     "fabric": "^5.3.0",
+    "konva": "^8.4.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-konva": "^18.2.5",
+    "use-image": "^1.1.0"
   },
   "devDependencies": {
     "@types/fabric": "^4.5.15",
